--- a/css/mods.css
+++ b/css/mods.css
@@ -17,6 +17,14 @@ nav {
     
 }
 
+footer {
+    background-color: black;
+    color: white;
+    padding: 5% 20%;
+    width: 100%;
+    height: 500px;
+}
+
 button {
     border: none;
     color: rgb(255, 255, 255);
@@ -59,6 +67,7 @@ button {
 }
 
 .main-start p {
+    width: 35%;
     position: relative;
     top: 270px;
     left: 10%;
@@ -101,7 +110,7 @@ button {
     left: 40%;
 }
 
-.sub, .partner, .info, .clients-head, .faq {
+.sub, .partner, .info, .clients-head {
     padding: 0 15%;
 }
 
@@ -127,7 +136,7 @@ button {
     
 }
 
-.sub-plans * {
+.sub-plans *, .clients-head {
     line-height: 200%;
 }
 
@@ -218,8 +227,126 @@ button {
     height: auto;
 }
 
+.client-body {
+    width: 100%;
+    height: auto;
+}
+
+.client-left {
+    width: 33.333%; 
+    height: 550px;
+}
+
+.client-mid {
+    width: 33.333%;
+    height: 550px;
+    background-color: rgb(245,245,245);
+    padding: 7% 3%;
+}
+
+.client-right {
+    width: 33.333%;
+    height: 550px;
+}
+
+.client-left img, .client-right img {
+    width: 50%;
+    height: 50%;
+    position: relative;
+    top: 25%;
+    left: 25%;
+}
+
+.brand1, .brand2, .brand3, .brand4, .brand5, .brand6, .brand7, .brand8 {
+    width: 50%;
+    height: 50%;
+}
+
+.brand1 {
+    background-color: rgb(162,211,155);
+}
+
+.brand2 {
+    background-color: rgb(97,8,43);
+}
+
+.brand3 {
+    background-color: rgb(0,147,206);
+}
+
+.brand4 {
+    background-color: rgb(255,28,28);
+}
+
+.brand5 {
+    background-color: rgb(213,0,31);
+}
+
+.brand6 {
+    background-color: rgb(180,208,231);
+}
+
+.brand7 {
+    background-color: rgb(13,36,129);
+}
+
+.brand8 {
+    background-color: rgb(255,216,48);
+}
+
+.trial {
+    background-color: rgb(180,208,231);
+    padding: 4% 45% 4% 20%;
+
+}
+
+.trial button {
+    border: solid 1px;
+    color: rgb(0, 0, 0);
+    background-color: rgb(255, 255, 255);
+    padding: 10px 25px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;
+     margin: 4px 2px;
+    position: relative;
+    left: 165px;
+    cursor: pointer;
+    position: relative;
+    bottom: 80px;
+    left: 100%;
+}
+
+.trial h1 {
+    color: rgb(97,8,43);
+}
+
+.faq {
+    line-height: 200%;
+    padding: 5% 10%;
+}
+
+.faq-container ul {
+    list-style: none;
+}
+
+.footer-sub {
+    width: 18%;
+    margin-right: 2%;
+    line-height: 200%;
+}
+
 .check {
     color: rgb(0,97,255);
+}
+
+.arrow {
+    width: 25px;
+    height: 25%;
+    position: relative;
+    bottom: 15px;
+    left: 95%;
+    cursor: pointer;
 }
 
 .fl {
@@ -237,3 +364,18 @@ button {
 }
 
 /* -----id's----- */
+
+#mid-client-img {
+    width: 20%;
+}
+
+#footer-lang {
+    color: rgb(97,97,97);
+    width: 10%;
+    position: relative;
+    top: 20px;
+}
+
+#footer-lang p {
+    cursor: pointer;
+}
